--- a/demo/index.html
+++ b/demo/index.html
@@ -18,12 +18,16 @@
         //谷歌地图
         var url = "http://mt1.google.cn/vt/lyrs=s&hl=zh-CN&x={x}&y={y}&z={z}&s=Gali";
         var googleMap = new Cesium.UrlTemplateImageryProvider({ url: url });
+        //高德
+        let gaodeMap = new Cesium.UrlTemplateImageryProvider({
+            url: "https://webst02.is.autonavi.com/appmaptile?style=6&x={x}&y={y}&z={z}",
+        });
 
         // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
         const viewer = new Cesium.Viewer('cesiumContainer', {
             terrainProvider: Cesium.createWorldTerrain(),
             baseLayerPicker: false, //是否显示图层选择控件
-            imageryProvider: googleMap,
+            imageryProvider: gaodeMap,
         });
 
         //导入自定义3d模型
