--- a/demo/index.html
+++ b/demo/index.html
@@ -22,12 +22,16 @@
         let gaodeMap = new Cesium.UrlTemplateImageryProvider({
             url: "https://webst02.is.autonavi.com/appmaptile?style=6&x={x}&y={y}&z={z}",
         });
+        //天地图 
+        let tiandi = new Cesium.UrlTemplateImageryProvider({
+            url: "http://t0.tianditu.gov.cn/img_w/wmts?tk=82417b54cd58a7c412720684ded669c4"
+        });
 
         // Initialize the Cesium Viewer in the HTML element with the `cesiumContainer` ID.
         const viewer = new Cesium.Viewer('cesiumContainer', {
             terrainProvider: Cesium.createWorldTerrain(),
             baseLayerPicker: false, //是否显示图层选择控件
-            imageryProvider: gaodeMap,
+            imageryProvider: tiandi,
         });
 
         //导入自定义3d模型
