--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
         function createTdtiImageryProvider() {
             viewer.imageryLayers.addImageryProvider(
                 new Cesium.WebMapTileServiceImageryProvider({
-                    url: 'http://t0.tianditu.gov.cn/img_w/wmts?tk=82417b54cd58a7c412720684ded669c4',
+                    url: 'https://t0.tianditu.gov.cn/img_w/wmts?tk=82417b54cd58a7c412720684ded669c4',
                     layer: 'img',
                     style: 'default',
                     tileMatrixSetID: 'w',
